--- a/src/app/viewes/newTask/newTask/newTask.component.html
+++ b/src/app/viewes/newTask/newTask/newTask.component.html
@@ -3,5 +3,7 @@
   <button type="submit">Submit</button>
 </form>
 
+<app-task-list></app-task-list>
 
-<button (click)="goBack()">go back</button>
+
+<button (click)="goBack()">go back</button> 
